# llm-study

./: CLAUDE.md  LICENSE  README.md
course/: COURSE_INDEX.md  README.md
course/ActiveLoop-LLM-Training/: README.md
course/Coursera-GenAI-LLMs/: README.md
course/Datawhale-Happy-LLM/: README.md
course/Datawhale-LLM-Cookbook/: README.md
course/Google-LLM-Introduction/: README.md
course/Salesforce-LLM-Course/: README.md
course/李宏毅大模型教程/: README.md
hand-on-llm/: CLAUDE.md  README.md  example_data.txt  inference.py  main.py  model.py  pyproject.toml  tokenizer.py  train.py
torch_learn/: README.md  main.py  pyproject.toml
torch_learn/01-basics/: README.md  autograd.py  exercises.py  tensors.py
torch_learn/02-data/: README.md  dataloader.py  dataset.py  transforms.py
torch_learn/03-nn-basics/: README.md  loss_optim.py  model_building.py  training_loop.py
torch_learn/04-cnn/: README.md  lenet.py  predict.py  resnet.py  train.py
torch_learn/05-advanced-cv/: README.md  object_detection.py  segmentation.py  transfer_learning.py
torch_learn/common/: __init__.py  config.py  logging.py  metrics.py
torch_learn/course/HandOnLLM/: music_recommendation.py  token.py
torch_learn/src/cnn/: cnn.py  train.py
torch_learn/utils/: __init__.py  device.py  seed.py
